--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>sideBox</title>
   </head>
-  <body>
-    <h1>This is the first of myBlog</h1>
+  <body style="background-color:green;">
+    <center><h1 style="color:yellow;">This is the first of myBlog</h1></center>
   </body>
 </html>
