Salam dari Arfafa
Udin seduniaaa

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>sideBox</title>
+    <title>Udin Seduniaaa</title>
   </head>
   <body style="background-color:green;">
     <center><h1 style="color:yellow;">This is the first of myBlog</h1></center>
